--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "copyfiles --flat src/keys/*.pem dist/keys && copyfiles --flat src/views/*.hjs dist/views && tsc-watch --onSuccess \"node dist/index.js\"",
-    "build": "tsc && copyfiles --flat src/keys/*.pem dist/keys && copyfiles --flat src/views/*.hjs dist/views",
-    "keys": "node src/lib/genKeys.js"
+    "build": "tsc && copyfiles --flat src/views/*.hjs dist/views",
+    "keys": "node src/lib/genKeys.js && copyfiles --flat src/keys/*.pem dist/keys"
   },
   "author": "Leonardo Vizcaya (Arpix)",
   "license": "ISC",
