--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "passport-facebook-token": "^3.3.0",
     "passport-google-token": "^0.1.2",
     "passport-jwt": "^4.0.0",
-    "pg": "^8.0.2",
-    "rsa-pem-to-jwk": "^1.1.3"
+    "pem-jwk": "^2.0.0",
+    "pg": "^8.0.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
