Code update to make it more generic.

--- a/example.env
+++ b/example.env
@@ -1,13 +1,20 @@
-// JWT_SECRET=
+//   Data Base
 // DB_USER=
 // DB_PASSWORD=
 // DB_HOST=192.168.43.229
 // DB_PORT=5432
 // DB_DATA_BASE=eagle
+
+//   Auth
+// JWT_SECRET=
+// JWT_ALGORITHM=RS256
 // CONNECT_TOKEN_LIFE=900
 // REFRESH_TOKEN_LIFE=31536000
 // SECURE_TOKEN=true // set to true if your using https
+// PASSWD_ALGORITHM=sha512
+// LAMBDA_CODE=hasura_claim
 
+//   Email
 // EMAIL_VERIFICATION_SUBJECT=Verify your email
 // RESET_PASSWORD_SUBJECT=Reset your password
 
