Define si el registro es permitido o no.

--- a/example.env
+++ b/example.env
@@ -13,6 +13,7 @@
 // SECURE_TOKEN=true // set to true if your using https
 // PASSWD_ALGORITHM=sha512
 // LAMBDA_CODE=hasura_claim
+// ALLOW_REGISTRATION=true
 
 //   Email
 // EMAIL_VERIFICATION_SUBJECT=Verify your email
