--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -25,7 +26,9 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.5",
     "passport": "^0.6.0",
+    "passport-bitbucket-token": "^1.0.0",
     "passport-facebook-token": "^4.0.0",
+    "passport-github-token": "^3.0.0",
     "passport-google-token": "^0.1.2",
     "passport-jwt": "^4.0.0",
     "pem-jwk": "^2.0.0",
