--- a/example.env
+++ b/example.env
@@ -1,46 +1,60 @@
-//   Data Base
-// DB_USER=
-// DB_PASSWORD=
-// DB_HOST=192.168.43.229
-// DB_PORT=5432
-// DB_DATA_BASE=eagle
+#   Data Base
+# DB_USER=
+# DB_PASSWORD=
+# DB_HOST=192.168.43.229
+# DB_PORT=5432
+# DB_DATA_BASE=eagle
 
-//   Auth
-// JWT_SECRET=
-// JWT_ALGORITHM=RS256
-// CONNECT_TOKEN_LIFE=900
-// REFRESH_TOKEN_LIFE=31536000
-// SECURE_TOKEN=true // set to true if your using https
-// PASSWD_ALGORITHM=sha512
-// LAMBDA_CODE=hasura_claim
-// ALLOW_REGISTRATION=true
+#   Auth
+# JWT_SECRET=
+# JWT_ALGORITHM=RS256
+# CONNECT_TOKEN_LIFE=900
+# REFRESH_TOKEN_LIFE=31536000
+# SECURE_TOKEN=true # set to true if your using https
+# PASSWD_ALGORITHM=sha512
+# LAMBDA_CODE=hasura_claim
+# ALLOW_REGISTRATION=true
+# PASSWORD_MIN=6
+# PASSWORD_STRONG=true
+# LOGIN_AFTER_REGISTER=true
+# EMAIL_VERIFICATION=true
+# SIGN_SECRET_KEY="FhDK7rE3rweV-wZjn4-UQSPTnPH5GiAloeoB5WfBDelnvxPBp"
 
-//   Email
-// EMAIL_VERIFICATION_SUBJECT=Verify your email
-// RESET_PASSWORD_SUBJECT=Reset your password
+#   Email
+# EMAIL_VERIFICATION_SUBJECT=Verify your email
+# RESET_PASSWORD_SUBJECT=Reset your password
 
-//   Email Zoho example
-// EMAIL_FROM=
-// EMAIL_SERVICE=Zoho
-// EMAIL_HOST=smtp.zoho.com
-// EMAIL_PORT=587
-// EMAIL_SECURE=true
-// EMAIL_AUTH_USER=
-// EMAIL_AUTH_PASSWORD=
+#   Email Zoho example
+# EMAIL_FROM=
+# EMAIL_SERVICE=Zoho
+# EMAIL_HOST=smtp.zoho.com
+# EMAIL_PORT=587
+# EMAIL_SECURE=true
+# EMAIL_AUTH_USER=
+# EMAIL_AUTH_PASSWORD=
 
-//   Email Gmail example
-// EMAIL_FROM=
-// EMAIL_SERVICE='Gmail'
-// EMAIL_HOST=smtp.gmail.com
-// EMAIL_PORT=465
-// EMAIL_SECURE=true
-// EMAIL_AUTH_USER=
-// CLIENT_ID=
-// CLIENT_SECRET=
-// REFRESH_TOKEN=
-// ACCESS_TOKEN=
+#   Email Gmail example
+# EMAIL_FROM=
+# EMAIL_SERVICE='Gmail'
+# EMAIL_HOST=smtp.gmail.com
+# EMAIL_PORT=465
+# EMAIL_SECURE=true
+# EMAIL_AUTH_USER=
+# CLIENT_ID=
+# CLIENT_SECRET=
+# REFRESH_TOKEN=
+# ACCESS_TOKEN=
 
-//   Facebook
-// FACEBOOK_APP_SECRET=
-// FACEBOOK_APP_ID=
-// FACEBOOK_CALLBACK_URL=
+#   Facebook
+# FACEBOOK_APP_SECRET=
+# FACEBOOK_APP_ID=
+# FACEBOOK_CALLBACK_URL=
+
+#   Github
+# GITHUB_APP_ID=
+# GITHUB_APP_SECRET=
+# GITHUB_URL_TOKEN=
+
+#   Bitbucket
+# BITBUCKET_APP_ID=
+# BITBUCKET_APP_SECRET=
