--- a/example.env
+++ b/example.env
@@ -11,6 +11,7 @@
 # CONNECT_TOKEN_LIFE=900
 # REFRESH_TOKEN_LIFE=31536000
 # SECURE_TOKEN=true # set to true if your using https
+# REFRESH_ON_COOKIE=false
 # PASSWD_ALGORITHM=sha512
 # LAMBDA_CODE=hasura_claim
 # ALLOW_REGISTRATION=true
