--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "copyfiles --flat src/keys/*.pem dist/keys && copyfiles --flat src/views/*.hjs dist/views && tsc-watch --onSuccess \"node dist/index.js\"",
+    "dev": "copyfiles --flat src/keys/*.pem dist/keys && copyfiles -u 2 src/views/**/* dist/views && tsc-watch --onSuccess \"node dist/index.js\"",
     "build": "tsc && copyfiles --flat src/views/*.hjs dist/views",
     "keys": "node src/lib/genKeys.js && copyfiles --flat src/keys/*.pem dist/keys"
   },
