--- a/example.env
+++ b/example.env
@@ -44,6 +44,11 @@
 # REFRESH_TOKEN=
 # ACCESS_TOKEN=
 
+#   AWS
+# AWS_ACCESS_KEY=""
+# AWS_SECRET_KEY=""
+# AWS_REGION="us-east-2"
+
 #   Facebook
 # FACEBOOK_APP_SECRET=
 # FACEBOOK_APP_ID=
