--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "author": "Leonardo Vizcaya (Arpix)",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.409.0",
     "@hapi/joi": "^17.1.1",
-    "aws-sdk": "^2.1454.0",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
